fix: align icon

--- a/static/style.scss
+++ b/static/style.scss
@@ -38,7 +38,7 @@ li[data-topic-event-type="dice"] > span {
   vertical-align: baseline;
 }
 li[data-topic-event-type="dice"] > .timeline-badge {
-  margin-left: -51px !important;
+  margin-left: -47px !important;
   margin-top: 0.5rem;
 }
 li[data-topic-event-type="dice"] > .timeline-text {
